DMOD-97 fix message .properties files, German

--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -2,4 +2,4 @@
 20002=Operation can not be calculated on a Null Amount
 20003=Unable to pay fine, amount is larger than owed
 20004=The item {0} is not renewable
-20005=Loan period must be greater than 1, period entered: {0}
+20005=Loan period must be at least 1, period entered: {0}
